--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Patua+One&display=swap');
 
 body {
-    /* background-color: #f0d66ec0; */
+    background-color: black;
     color: pink;
 }
 
@@ -10,7 +10,7 @@ legend {
     font-size: 60px;
     font-weight: 100;
     color: #d38679;
-    background-color: rgba(132, 80, 139, 0.9);
+    background-color: rgba(132, 80, 139, 0.7);
     border-radius: 20px;
     padding: 10px;
 }
@@ -19,6 +19,8 @@ label {
     font-family: monospace;
     font-size: 30px;
     color: #9ddfd3;
+    position: relative;
+    left: 50px;
 }
 
 fieldset {
@@ -27,7 +29,7 @@ fieldset {
     border-color: #a685e2;
     border-radius: 30px;
     background-color: #6155a6;
-    box-shadow: 5px 5px 5px 7px rgba(206, 151, 194, 0.9);
+    box-shadow: 5px 5px 10px 5px rgba(206, 151, 194, 0.9);
 }
 
 .links {
