--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Patua+One&display=swap');
 
 body {
-    background-color: black;
+    background: linear-gradient(35deg, purple, cyan);
+    /* background-color: black; */
     color: pink;
 }
 
